##===================================================================================================
##                 Copyright 2015   LRI    UMR 8623 CNRS/Univ Paris Sud XI
##                 Copyright 2015 Joel Falcou
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
##===================================================================================================

##add_subdirectory(benchmark)
add_subdirectory(common)
add_subdirectory(unit)
